--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "nuxt": "^3.14.0",
     "primevue": "^4.2.1",
+    "sass": "^1.81.0",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "sass-embedded": "^1.81.0"
   }
 }
