--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "nuxt": "^3.14.0",
     "primevue": "^4.2.1",
     "sass": "^1.81.0",
+    "vee-validate": "^4.15.0",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "sass-embedded": "^1.81.0"
