--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "primevue": "^4.2.1",
     "sass": "^1.81.0",
     "vee-validate": "^4.15.0",
+    "vite": "^6.0.0",
     "vue": "latest",
     "vue-router": "latest",
     "yup": "^1.6.1"
