--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,19 +26,19 @@ jobs:
       - name: Install dependencies (yarn)
         run: |
           cd ${{ matrix.folder }}
-          yarn install --frozen-lockfile
+          yarn install --frozen-lockfile --ignore-engines
 
       - name: Lint (nếu có)
         run: |
           cd ${{ matrix.folder }}
-          if [ -f package.json ]; then yarn lint || echo "No lint script"; fi
+          if [ -f package.json ]; then yarn lint --ignore-engines || echo "No lint script"; fi
 
       - name: Build (nếu có)
         run: |
           cd ${{ matrix.folder }}
-          if [ -f package.json ]; then yarn build || echo "No build script"; fi
+          if [ -f package.json ]; then yarn build --ignore-engines || echo "No build script"; fi
 
       - name: Test (nếu có)
         run: |
           cd ${{ matrix.folder }}
-          if [ -f package.json ]; then yarn test || echo "No test script"; fi
+          if [ -f package.json ]; then yarn test --ignore-engines || echo "No test script"; fi
