--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^1.5.2",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "@primevue/nuxt-module": "^4.3.6",
     "@primevue/themes": "^4.3.6",
     "@sidebase/nuxt-auth": "^1.0.0",
