--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,9 @@
 {
   "name": "nuxt-app",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "type": "module",
   "scripts": {
     "build": "nuxt build",
