--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,13 @@
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@pinia/nuxt": "^0.11.1",
     "@primevue/nuxt-module": "^4.3.6",
     "@primevue/themes": "^4.3.6",
     "@sidebase/nuxt-auth": "^1.0.0",
     "caniuse-lite": "^1.0.30001715",
     "nuxt": "^3.14.0",
+    "pinia": "^3.0.3",
     "primevue": "^4.2.1",
     "sass": "^1.81.0",
     "vee-validate": "^4.15.0",
