--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@payos/node": "^1.0.10",
     "argon2": "^0.41.1",
+    "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
@@ -23,7 +24,7 @@
     "mongoose": "^8.9.1",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.2",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "2",
     "nodemailer": "^7.0.3",
     "socket.io": "^4.8.0",
     "swagger-jsdoc": "^6.2.8",
