--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,14 +19,15 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
+          cache: "yarn"
 
       - name: Install dependencies (yarn)
         run: |
           cd ${{ matrix.folder }}
-          yarn install --frozen-lockfile --ignore-engines
+          yarn install --ignore-engines
 
       - name: Lint (nếu có)
         run: |
