--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,10 @@
     "caniuse-lite": "^1.0.30001715",
     "nuxt": "^3.14.0",
     "pinia": "^3.0.3",
+    "moment": "^2.30.1",
+    "numeral": "^2.0.6",
+    "popper.js": "^1.16.1",
+    "primeicons": "^7.0.0",
     "primevue": "^4.2.1",
     "sass": "^1.81.0",
     "tailwindcss-primeui": "^0.3.4",
