--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,8 @@ services:
       - "3000:3000"
     environment:
       # Dùng tên service backend thay vì localhost để container frontend gọi đúng
-      - NUXT_PUBLIC_API_BASE=/api
+      - NUXT_PUBLIC_API_BASE=http://backend:8888
+      - NUXT_PUBLIC_API_PREFIX=/api
     depends_on:
       - backend
     volumes:
