--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,9 +36,11 @@ services:
     ports:
       - "3000:3000"
     environment:
-      # Dùng tên service backend thay vì localhost để container frontend gọi đúng
+      # Client-side fetch chạy ở trình duyệt → phải gọi domain public thông qua Nginx
       - NUXT_PUBLIC_API_BASE=https://18.205.237.3
       - NUXT_PUBLIC_API_PREFIX=/api
+      - NUXT_HOST=0.0.0.0
+      - NUXT_PORT=3000
     depends_on:
       - backend
     volumes:
