--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,9 @@ services:
 
   # Frontend Website
   frontend:
-    build: ./client
+    build:
+      context: ./client
+      dockerfile: Dockerfile.prod
     container_name: bookstore-frontend
     ports:
       - "3000:3000"
