--- a/client/Dockerfile.prod
+++ b/client/Dockerfile.prod
@@ -9,6 +9,7 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 ENV NODE_ENV=production
+ENV NODE_OPTIONS=--max-old-space-size=4096
 RUN yarn build
 
 FROM node:20-alpine AS runner
