--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,8 +4,17 @@
 FROM node:20-alpine AS build
 WORKDIR /app
 
+ARG NUXT_PUBLIC_API_BASE
+ARG NUXT_PUBLIC_BASE_URL
+ARG NUXT_PUBLIC_API_PREFIX
+ARG NUXT_PUBLIC_AUTH_BASE
+
 ENV NUXT_TELEMETRY_DISABLED=1
 ENV NODE_OPTIONS="--max-old-space-size=4096"
+ENV NUXT_PUBLIC_API_BASE=${NUXT_PUBLIC_API_BASE}
+ENV NUXT_PUBLIC_BASE_URL=${NUXT_PUBLIC_BASE_URL}
+ENV NUXT_PUBLIC_API_PREFIX=${NUXT_PUBLIC_API_PREFIX}
+ENV NUXT_PUBLIC_AUTH_BASE=${NUXT_PUBLIC_AUTH_BASE}
 
 # Copy file cấu hình workspace trước để cache dependency layer
 COPY package.json yarn.lock ./
@@ -21,7 +30,16 @@ RUN yarn build
 FROM gcr.io/distroless/nodejs20 AS prod
 WORKDIR /app
 
+ARG NUXT_PUBLIC_API_BASE
+ARG NUXT_PUBLIC_BASE_URL
+ARG NUXT_PUBLIC_API_PREFIX
+ARG NUXT_PUBLIC_AUTH_BASE
+
 ENV NUXT_TELEMETRY_DISABLED=1
+ENV NUXT_PUBLIC_API_BASE=${NUXT_PUBLIC_API_BASE}
+ENV NUXT_PUBLIC_BASE_URL=${NUXT_PUBLIC_BASE_URL}
+ENV NUXT_PUBLIC_API_PREFIX=${NUXT_PUBLIC_API_PREFIX}
+ENV NUXT_PUBLIC_AUTH_BASE=${NUXT_PUBLIC_AUTH_BASE}
 
 COPY --from=build /app/.output /app/.output
 
