--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,20 @@
 .cursorrules
 .env.local
 .dockerignore
+
+# Node/Yarn
+node_modules
+**/node_modules
+
+# Env files
+.env
+.env.*
+!.env.example
+
+# Logs
+logs
+*.log
+
+# OS junk
+.DS_Store
+Thumbs.db
