--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,6 @@
     "android:open": "npx cap open android"
   },
   "dependencies": {
-    "@sidebase/nuxt-auth": "^0.7.2",
     "@capacitor/android": "^7.4.3",
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
@@ -27,17 +26,19 @@
     "@pinia/nuxt": "^0.11.1",
     "@primevue/nuxt-module": "^4.3.6",
     "@primevue/themes": "^4.3.6",
+    "@sidebase/nuxt-auth": "^0.7.2",
     "caniuse-lite": "^1.0.30001715",
-    "nuxt": "^3.14.0",
-    "pinia": "^3.0.3",
+    "chart.js": "^4.4.3",
     "moment": "^2.30.1",
     "numeral": "^2.0.6",
+    "nuxt": "^3.14.0",
+    "pinia": "^3.0.3",
     "popper.js": "^1.16.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.1",
     "quill": "^2.0.2",
-    "chart.js": "^4.4.3",
     "sass": "^1.81.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss-primeui": "^0.3.4",
     "vee-validate": "^4.15.0",
     "vite": "^6.0.0",
