--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/vision": "^5.3.4",
     "@payos/node": "^1.0.10",
     "argon2": "^0.41.1",
     "aws-sdk": "^2.1691.0",
@@ -26,7 +27,8 @@
     "multer": "^1.4.5-lts.2",
     "node-fetch": "2",
     "nodemailer": "^7.0.3",
-    "socket.io": "^4.8.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
